Trying to fix logo on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ header.main-header .ornament {
 header.main-header .brand {
     padding-top: 15px;
     margin-bottom: -50px;
-    min-height: 161px;
+    min-height: 168px;
     /*margin-left: -45px;*/
 }
 
